<android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    android:layout_weight="1"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/peer1"
        android:background="@color/colorPeerUpdated"
        android:clickable="true"
        android:onClick="layoutOnClickImpl">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerTitle1"
            android:text="@string/peer1"
            android:textSize="@dimen/textSize"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageTitle1"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:layout_below="@id/peerTitle1"
            android:text="@string/msg_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerMessage1"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:textSize="@dimen/textSize"
            android:layout_below="@id/messageTitle1"
            android:textStyle="bold"
            android:text="tst"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/peer2"
        android:background="@color/colorPeerUpdated"
        android:clickable="true"
        android:onClick="layoutOnClickImpl">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerTitle2"
            android:text="@string/peer2"
            android:textSize="@dimen/textSize"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageTitle2"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:layout_below="@id/peerTitle2"
            android:text="@string/msg_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerMessage2"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:textSize="@dimen/textSize"
            android:layout_below="@id/messageTitle2"
            android:textStyle="bold"
            android:text="tst"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/peer3"
        android:background="@color/colorPeerUpdated"
        android:clickable="true"
        android:onClick="layoutOnClickImpl">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerTitle3"
            android:text="@string/peer3"
            android:textSize="@dimen/textSize"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageTitle3"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:layout_below="@id/peerTitle3"
            android:text="@string/msg_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerMessage3"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:textSize="@dimen/textSize"
            android:layout_below="@id/messageTitle3"
            android:textStyle="bold"
            android:text="tst"/>
    </RelativeLayout>

</android.support.v7.widget.LinearLayoutCompat>