<android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    android:layout_weight="1"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/peer7"
        android:background="@color/colorPeerUpdated"
        android:clickable="true"
        android:onClick="layoutOnClickImpl">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerTitle7"
            android:text="@string/peer7"
            android:textSize="@dimen/textSize"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageTitle7"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:layout_below="@id/peerTitle7"
            android:text="@string/msg_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerMessage7"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:textSize="@dimen/textSize"
            android:layout_below="@id/messageTitle7"
            android:textStyle="bold"
            android:text="tst"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/peer8"
        android:background="@color/colorPeerUpdated"
        android:clickable="true"
        android:onClick="layoutOnClickImpl">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerTitle8"
            android:text="@string/peer8"
            android:textSize="@dimen/textSize"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageTitle8"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:layout_below="@id/peerTitle8"
            android:text="@string/msg_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerMessage8"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:textSize="@dimen/textSize"
            android:layout_below="@id/messageTitle8"
            android:textStyle="bold"
            android:text="tst"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/peer9"
        android:background="@color/colorPeerUpdated"
        android:clickable="true"
        android:onClick="layoutOnClickImpl">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerTitle9"
            android:text="@string/peer9"
            android:textSize="@dimen/textSize"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageTitle9"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:layout_below="@id/peerTitle9"
            android:text="@string/msg_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerMessage9"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:textSize="@dimen/textSize"
            android:layout_below="@id/messageTitle9"
            android:textStyle="bold"
            android:text="tst"/>
    </RelativeLayout>

</android.support.v7.widget.LinearLayoutCompat>