<android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    android:layout_weight="1"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/peer4"
        android:background="@color/colorPeerUpdated"
        android:clickable="true"
        android:onClick="layoutOnClickImpl">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerTitle4"
            android:text="@string/peer4"
            android:textSize="@dimen/textSize"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageTitle4"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:layout_below="@id/peerTitle4"
            android:text="@string/msg_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerMessage4"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:textSize="@dimen/textSize"
            android:layout_below="@id/messageTitle4"
            android:textStyle="bold"
            android:text="tst"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/peer5"
        android:background="@color/colorPeerUpdated"
        android:clickable="true"
        android:onClick="layoutOnClickImpl">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerTitle5"
            android:text="@string/peer5"
            android:textSize="@dimen/textSize"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageTitle5"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:layout_below="@id/peerTitle5"
            android:text="@string/msg_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerMessage5"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:textSize="@dimen/textSize"
            android:layout_below="@id/messageTitle5"
            android:textStyle="bold"
            android:text="tst"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/peer6"
        android:background="@color/colorPeerUpdated"
        android:clickable="true"
        android:onClick="layoutOnClickImpl">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerTitle6"
            android:text="@string/peer6"
            android:textSize="@dimen/textSize"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageTitle6"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:layout_below="@id/peerTitle6"
            android:text="@string/msg_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerMessage6"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:textSize="@dimen/textSize"
            android:layout_below="@id/messageTitle6"
            android:textStyle="bold"
            android:text="tst"/>
    </RelativeLayout>

</android.support.v7.widget.LinearLayoutCompat>