<android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    android:layout_weight="1"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/peer10"
        android:background="@color/colorPeerUpdated"
        android:clickable="true"
        android:onClick="layoutOnClickImpl"
        android:longClickable="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerTitle10"
            android:text="@string/peer10"
            android:textSize="@dimen/textSize"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageTitle10"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:layout_below="@id/peerTitle10"
            android:text="@string/msg_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerMessage10"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:textSize="@dimen/textSize"
            android:layout_below="@id/messageTitle10"
            android:textStyle="bold"
            android:text="tst"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/peer11"
        android:background="@color/colorPeerUpdated"
        android:clickable="true"
        android:onClick="layoutOnClickImpl">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerTitle11"
            android:text="@string/peer11"
            android:textSize="@dimen/textSize"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageTitle11"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:layout_below="@id/peerTitle11"
            android:text="@string/msg_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerMessage11"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:textSize="@dimen/textSize"
            android:layout_below="@id/messageTitle11"
            android:textStyle="bold"
            android:text="tst"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/peer12"
        android:background="@color/colorPeerUpdated"
        android:clickable="true"
        android:onClick="layoutOnClickImpl">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerTitle12"
            android:text="@string/peer12"
            android:textSize="@dimen/textSize"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageTitle12"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:layout_below="@id/peerTitle12"
            android:text="@string/msg_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peerMessage12"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:textSize="@dimen/textSize"
            android:layout_below="@id/messageTitle12"
            android:text="tst"
            android:textStyle="bold"/>
    </RelativeLayout>

</android.support.v7.widget.LinearLayoutCompat>